# yast-wagon

./: .cvsignore  .gitignore  POTFILES  RPMNAME  Rakefile  VERSION  configure.in.in  yast2-wagon.spec.in
agents/: Makefile.am
control/: Makefile.am  online_migration-SLE.glade  online_migration-SLE.xml
doc/: Makefile.am  Migration_Hooks.md
package/: yast2-wagon.changes  yast2-wagon.spec
src/: Makefile.am
src/clients/: Makefile.am  Wagon.ycp  wagon.rb  wagon.ycp  wagon_congratulate.rb  wagon_congratulate.ycp  wagon_custom_url.rb  wagon_custom_url.ycp  wagon_dup_repositories.rb  wagon_dup_repositories.ycp  wagon_migration_products.rb  wagon_migration_products.ycp  wagon_modify_repositories.rb  wagon_modify_repositories.ycp  wagon_point_of_no_return.rb  wagon_point_of_no_return.ycp  wagon_registration_check.rb  wagon_registration_check.ycp  wagon_registration_handler.rb  wagon_registration_handler.ycp  wagon_repositories_handler.rb  wagon_repositories_handler.ycp  wagon_restart_yast.rb  wagon_restart_yast.ycp  wagon_selfupdate.rb  wagon_selfupdate.ycp  wagon_update_proposal.rb  wagon_update_proposal.ycp  wagon_update_url.rb  wagon_update_url.ycp  wagon_you.ycp  welcome_in_wagon.rb  welcome_in_wagon.ycp
src/config/: Makefile.am  cd_update.desktop  online_migration-SLE.xml  online_migration-openSUSE.xml  online_migration.xml
src/desktop/: cd_update.desktop
src/include/: Makefile.am  common_func.ycp
src/include/wagon/: common_func.rb  wagon_helpers.rb  wagon_helpers.ycp
src/modules/: Makefile.am  RegistrationStatus.pm  Wagon.rb  Wagon.ycp
(+12 files in other folders)
